# sonic-clout

./: .gitignore  ARCHITECTURE.md  README-SOLANA.md  README.md  architect-readme.md  bun.lockb  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
abi/: ContentToken.json  SPLTokenFactory.json
app/: Providers.tsx  globals.css  layout.tsx  page.tsx
app/api/files/: route.ts
app/bonds/: page.tsx
app/glassmorphism/: page.tsx
app/lib/: types.ts
app/lib/services/: anchorVestingService.ts  ipfsService.ts  migrationHelper.ts  skillVestingIDL.json  sonicVestingService.ts  tokenFactoryService.ts  tokenService.ts  vestingService.ts
app/profile/: page.tsx
app/profile/[id]/: page.tsx
app/sega/: page.tsx
app/vesting/: page.tsx
components/: LoadingCircle.tsx  Navbar.tsx  ToastProvider.tsx
components/bonds/: sonic-bond-card.tsx  sonic-bonds.tsx
components/profile/: ProfileDetails.tsx  ProfileHeader.tsx  ProfilePhotoUpload.tsx
components/social/: create-post.tsx  post-card.tsx  tokenize-content.tsx
components/social/posts/: PostContainer.tsx  Replies.tsx  ReplyContainer.tsx  index.tsx
components/trading/: sega-pools.tsx  sega-swap.tsx  token-card.tsx
components/ui/: button.tsx  calendar.tsx  card.tsx  dialog.tsx  glass-card.tsx  input.tsx  popover.tsx  scroll-to-top.tsx  table.tsx  tabs.tsx  utils.ts
components/vesting/: VestingDashboard.tsx  create-vesting.tsx  vesting-dashboard.tsx
components/wallet/: ConnectWalletButton.tsx  NetworkToggle.tsx  WalletModal.tsx  wallet-connect-button.tsx  wallet-provider.tsx
config/: pinata.ts
constants/: index.ts
context/: GlobalContext.tsx  NetworkContext.tsx  SEGAContext.tsx  SonicVestingContext.tsx
contracts/: bun.lockb  hardhat.config.js  package.json
contracts/contracts/: SPLTokenFactory.sol  SkillVesting.sol
contracts/src/: SPLTokenFactory.sol  SkillVesting.sol
docs/: README.md  SUMMARY.md  business-plan.md  roadmap.md  team.md
docs/basics/: api-reference.md  bonds-derivatives.md  content-tokenization.md  frontend-architecture.md  skill-based-vesting.md  smart-contracts.md  trading-features.md
docs/getting-started/: connecting-wallet.md  quickstart.md
reusables/posts/: Feed-Container.tsx
sonic-anchor/: Anchor.toml  Cargo.toml  package.json
sonic-anchor/programs/greeting/: Cargo.toml
sonic-anchor/programs/skill_vesting/: Cargo.toml
sonic-anchor/programs/token_factory/: Cargo.toml
sonic-anchor/programs/token_factory/src/: lib.rs
sonic-contracts/: Anchor.toml  README.md  client.ts  package-lock.json  package.json
sonic-contracts/programs/skill_vesting/: Cargo.toml
sonic-contracts/programs/sonic_bonds/: Cargo.toml
sonic-contracts/programs/sonic_bonds/src/: lib.rs
sonic-contracts/programs/token_factory/: Cargo.toml
sonic-contracts/programs/token_factory/src/: lib.rs
types/: index.ts  orbisclub__components.d.ts  profile.ts
(+3 files in other folders)
