[package]
name = "sonic_bonds"
version = "0.1.0"
description = "Sonic Bonds - A program for creating and trading bonds based on social metrics"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sonic_bonds"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = "0.31.0"
solana-program = "=2.1.0"

