[package]
name = "token_factory"
version = "0.1.0"
description = "Token Factory - A program for creating content tokens"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_factory"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.0", features = ["idl-build"] }
solana-program = "=2.1.0"
# Removing solana-program dependency and using it from anchor-lang instead 